Modified details of work experience

--- a/en/index.html
+++ b/en/index.html
@@ -95,9 +95,9 @@
             </div>
             <h3 class="enw2" id="experience">Work Experience</h3>
             <div class="items">
-                <a class="item" href="https://www.facebook.com/taiea.twn/" target="_blank">
-                    <img src="/pictures/profile_use/experience/taiea.png" alt="TAIEA logo">
-                    <p class="title enw2">Taiwan Artificial Intelligence Education Association</p>
+                <a class="item" href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=en" target="_blank">
+                    <img src="/pictures/profile_use/experience/tonghsun.png" alt="Trademark of Tong Hsun Technology Co., Ltd.">
+                    <p class="title enw2">Tong Hsun Technology Co., Ltd. (English name TBD)</p>
                     <p class="description enw2">Teaching Assistant</p>
                     <p class="time enw2">Sep 2024 ~ Present</p>
                 </a>
