--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                     <p class="description zhw">內務</p>
                     <p class="time zhw">2023/02 ~ 2023/07</p>
                 </a>
-                <a class="item" href="https://www.facebook.com/taiea.twn/" target="_blank">
-                    <img src="/pictures/profile_use/experience/taiea.png" alt="台灣校園人工智慧教育協會logo">
-                    <p class="title zhw">台灣校園人工智慧教育協會</p>
-                    <p class="description zhw">教學助理</p>
+                <a class="item" href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=zh_TW" target="_blank">
+                        <img src="/pictures/profile_use/experience/tonghsun.png" alt="童訊科技股份有限公司商標" width="144" height="144">
+                    <p class="title zhw">童訊科技股份有限公司</p>
+                    <p class="description zhw">課程助教</p>
                     <p class="time zhw">2024/09 ~ Present</p>
                 </a>
             </div>
