--- a/projects/index.html
+++ b/projects/index.html
@@ -32,7 +32,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874"
      crossorigin="anonymous"></script>
     <!-- other source -->
-    <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/styles/projects.css">
 </head>
 <body>
     <header>
