--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -28,7 +28,7 @@
         gtag('config', 'G-VPCV2CWSBB');
     </script>
     <!-- other source -->
-    <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/styles/contact.css">
 </head>
 <body>
     <header>
