Modified page title

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-    <title>聯絡 | Allen Chang</title>
+    <title>聯繫表單 | Allen Chang</title>
     <!-- meta tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,8 +43,8 @@
         <nav>
             <ul id="mobilenav">
                 <li><a class="navb zhwb" href="/">首頁</a></li>
-                <li><a class="navb zhwb" href="/projects/">專案</a></li>
-                <li><a class="navb zhwb" href="/contact/">聯絡</a></li>
+                <li><a class="navb zhwb" href="/projects/">專案作品</a></li>
+                <li><a class="navb zhwb" href="/contact/">聯繫表單</a></li>
                 <li><a class="navb zhwb" href="/blog/">Blog</a></li>
                 <li><a class="navb zhwb" href="/en/">English</a></li>
                 <hr>
@@ -58,7 +58,7 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="zhwb">聯絡</span>
+                <span class="zhwb">聯繫表單</span>
             </p>
         </div>
         <div class="content">
