--- a/projects/index.html
+++ b/projects/index.html
@@ -47,8 +47,8 @@
         <nav>
             <ul id="mobilenav">
                 <li><a class="navb zhwb" href="/">首頁</a></li>
-                <li><a class="navb zhwb" href="/projects/">專案</a></li>
-                <li><a class="navb zhwb" href="/contact/">聯絡</a></li>
+                <li><a class="navb zhwb" href="/projects/">專案作品</a></li>
+                <li><a class="navb zhwb" href="/contact/">聯繫表單</a></li>
                 <li><a class="navb zhwb" href="/blog/">Blog</a></li>
                 <li><a class="navb zhwb" href="/en/">English</a></li>
                 <hr>
@@ -62,7 +62,7 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="zhwb">專案</span>
+                <span class="zhwb">專案作品</span>
             </p>
         </div>
         <div id="choose">
