Modified links block

--- a/index.html
+++ b/index.html
@@ -141,79 +141,72 @@
                 </div>
             </div>
             <h3 class="zhw" id="links">個人連結</h3>
-            <p class="zhwb">社群平台</p>
-            <div class="smallitems">
-                <a class="item" href="https://blueboy247.github.io/blog/" target="_blank">
-                    <img src="/pictures/profile_use/link/myblog.ico" alt="My Blog">
-                    <p class="title zhw">My Blog</p>
-                </a>
-                <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
-                    <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
-                    <p class="title zhw">LinkedIn</p>
-                </a>
-                <a class="item" href="https://twitter.com/summit_AMT" target="_blank">
-                    <img src="/pictures/profile_use/link/x.svg" alt="X logo">
-                    <p class="title zhw">Twitter</p>
-                </a>
-                <a class="item" href="https://bsky.app/profile/blueboy247.bsky.social" target="_blank">
-                    <img src="/pictures/profile_use/link/bluesky.svg" alt="Bluesky logo">
-                    <p class="title zhw">Bluesky</p>
-                </a>
-                <a class="item" href="https://github.com/BlueBoy247" target="_blank">
-                    <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo">
-                    <p class="title zhw">GitHub</p>
-                </a>
-                <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
-                    <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
-                    <p class="title zhw">GitRoll</p>
-                </a>
-            </div>
-            <p class="zhwb">解題平台</p>
-            <div class="smallitems">
-                <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
-                     <p class="title zhw">Codeforces</p>
-                </a>
-                <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
-                    <p class="title zhw">AtCoder</p>
-                </a>
-                <a class="item" href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">
-                    <img src="/pictures/profile_use/link/zerojudge.svg" alt="ZeroJudge logo">
-                    <p class="title zhw">ZeroJudge</p>
-                </a>
-                <a class="item" href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">
-                    <img src="/pictures/profile_use/link/tioj.svg" alt="TIOJ logo">
-                    <p class="title zhw">TIOJ</p>
-                </a>
-                <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo">
-                    <p class="title zhw">HackerRank</p>
-                </a>
-                <a class="item" href="https://leetcode.com/u/Shuba247/" target="_blank">
-                    <img src="/pictures/profile_use/link/leetcode.svg" alt="LeetCode logo">
-                    <p class="title zhw">LeetCode</p>
-                </a>
-                <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
-                    <p class="title zhw">picoCTF</p>
-                </a>
-                <a class="item" href="https://www.freecodecamp.org/BlueBoy247" target="_blank">
-                    <img src="/pictures/profile_use/link/freecodecamp.svg" alt="freeCodeCamp logo">
-                    <p class="title zhw">freeCodeCamp</p>
-                </a>
-            </div>
-            <p class="zhwb">贊助平台</p>
-            <div class="smallitems">
-                <a class="item" href="https://www.patreon.com/blueboy247" target="_blank">
-                    <img src="/pictures/profile_use/link/patreon.svg" alt="Patreon logo">
-                    <p class="title zhw">Patreon</p>
-                </a>
-                <a class="item" href="https://buymeacoffee.com/blueboy247" target="_blank">
-                    <img src="/pictures/profile_use/link/buymeacoffee.svg" alt="BuyMeACoffee logo">
-                    <p class="title zhw">Buy Me A Coffee</p>
-                </a>
-            </div>
+            <details id="social_platforms" open>
+                <summary class="zhwb">社群平台</summary>
+                <div class="smallitems">
+                    <a class="item" href="https://blueboy247.github.io/blog/" target="_blank">
+                        <img src="/pictures/profile_use/link/myblog.ico" alt="Blog logo" width="96" height="96">
+                        <p class="title zhw">My Blog</p>
+                    </a>
+                    <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
+                        <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo" width="96" height="96">
+                        <p class="title zhw">LinkedIn</p>
+                    </a>
+                    <a class="item" href="https://twitter.com/summit_AMT" target="_blank" width="96" height="96">
+                        <img src="/pictures/profile_use/link/x.svg" alt="X logo">
+                        <p class="title zhw">Twitter</p>
+                    </a>
+                    <a class="item" href="https://bsky.app/profile/blueboy247.bsky.social" target="_blank">
+                        <img src="/pictures/profile_use/link/bluesky.svg" alt="Bluesky logo" width="96" height="96">
+                        <p class="title zhw">Bluesky</p>
+                    </a>
+                    <a class="item" href="https://github.com/BlueBoy247" target="_blank">
+                        <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo" width="96" height="96">
+                        <p class="title zhw">GitHub</p>
+                    </a>
+                    <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
+                        <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo" width="96" height="96">
+                        <p class="title zhw">GitRoll</p>
+                    </a>
+                </div>
+            </details>
+            <details id="programming_platforms" open>
+                <summary class="zhwb">解題平台</summary>
+                <div class="smallitems">
+                    <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo" width="96" height="96">
+                         <p class="title zhw">Codeforces</p>
+                    </a>
+                    <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo" width="96" height="96">
+                        <p class="title zhw">AtCoder</p>
+                    </a>
+                    <a class="item" href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">
+                        <img src="/pictures/profile_use/link/zerojudge.svg" alt="ZeroJudge logo" width="96" height="96">
+                        <p class="title zhw">ZeroJudge</p>
+                    </a>
+                    <a class="item" href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">
+                        <img src="/pictures/profile_use/link/tioj.svg" alt="TIOJ logo" width="96" height="96">
+                        <p class="title zhw">TIOJ</p>
+                    </a>
+                    <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo" width="96" height="96">
+                        <p class="title zhw">HackerRank</p>
+                    </a>
+                    <a class="item" href="https://leetcode.com/u/Shuba247/" target="_blank">
+                        <img src="/pictures/profile_use/link/leetcode.svg" alt="LeetCode logo" width="96" height="96">
+                        <p class="title zhw">LeetCode</p>
+                    </a>
+                    <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo" width="96" height="96">
+                        <p class="title zhw">picoCTF</p>
+                    </a>
+                    <a class="item" href="https://www.freecodecamp.org/BlueBoy247" target="_blank">
+                        <img src="/pictures/profile_use/link/freecodecamp.svg" alt="freeCodeCamp logo" width="96" height="96">
+                        <p class="title zhw">freeCodeCamp</p>
+                    </a>
+                </div>
+            </details>
         </div>
     </main>
     <footer>
