--- a/en/index.html
+++ b/en/index.html
@@ -159,68 +159,77 @@
                     <p class="time enw2">Jan 24, 2022</p>
                 </a>
             </div>
+                </a>
+                </a>
+            </div>
             <h3 class="enw2" id="links">Links</h3>
-            <p class="enw1">Social Platforms</p>
-            <div class="smallitems">
-                <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
-                    <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
-                    <p class="title enw2">LinkedIn</p>
-                </a>
-                <a class="item" href="https://twitter.com/summit_AMT" target="_blank">
-                    <img src="/pictures/profile_use/link/x.svg" alt="X logo">
-                    <p class="title enw2">Twitter</p>
-                </a>
-                <a class="item" href="https://bsky.app/profile/blueboy247.bsky.social" target="_blank">
-                    <img src="/pictures/profile_use/link/bluesky.svg" alt="Bluesky logo">
-                    <p class="title enw2">Bluesky</p>
-                </a>
-                <a class="item" href="https://github.com/BlueBoy247" target="_blank">
-                    <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo">
-                    <p class="title enw2">GitHub</p>
-                </a>
-                <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
-                    <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
-                    <p class="title enw2">GitRoll</p>
-                </a>
-            </div>
-            <p class="enw1">Programming Platforms</p>
-            <div class="smallitems">
-                <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
-                     <p class="title enw2">Codeforces</p>
-                </a>
-                <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
-                    <p class="title enw2">AtCoder</p>
-                </a>
-                <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo">
-                    <p class="title enw2">HackerRank</p>
-                </a>
-                <a class="item" href="https://leetcode.com/u/Shuba247/" target="_blank">
-                    <img src="/pictures/profile_use/link/leetcode.svg" alt="LeetCode logo">
-                    <p class="title enw2">LeetCode</p>
-                </a>
-                <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
-                    <p class="title enw2">picoCTF</p>
-                </a>
-                <a class="item" href="https://www.freecodecamp.org/BlueBoy247" target="_blank">
-                    <img src="/pictures/profile_use/link/freecodecamp.svg" alt="freeCodeCamp logo">
-                    <p class="title enw2">freeCodeCamp</p>
-                </a>
-            </div>
-            <p class="enw1">Support Platforms</p>
-            <div class="smallitems">
-                <a class="item" href="https://www.patreon.com/blueboy247" target="_blank">
-                    <img src="/pictures/profile_use/link/patreon.svg" alt="Patreon logo">
-                    <p class="title enw2">Patreon</p>
-                </a>
-                <a class="item" href="https://buymeacoffee.com/blueboy247" target="_blank">
-                    <img src="/pictures/profile_use/link/buymeacoffee.svg" alt="BuyMeACoffee logo">
-                    <p class="title enw2">Buy Me A Coffee</p>
-                </a>
-            </div>
+            <details id="social_platforms" open>
+                <summary class="enw1">Social Platforms</summary>
+                <div class="smallitems">
+                    <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
+                        <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
+                        <p class="title enw2">LinkedIn</p>
+                    </a>
+                    <a class="item" href="https://twitter.com/summit_AMT" target="_blank">
+                        <img src="/pictures/profile_use/link/x.svg" alt="X logo">
+                        <p class="title enw2">Twitter</p>
+                    </a>
+                    <a class="item" href="https://bsky.app/profile/blueboy247.bsky.social" target="_blank">
+                        <img src="/pictures/profile_use/link/bluesky.svg" alt="Bluesky logo">
+                        <p class="title enw2">Bluesky</p>
+                    </a>
+                    <a class="item" href="https://github.com/BlueBoy247" target="_blank">
+                        <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo">
+                        <p class="title enw2">GitHub</p>
+                    </a>
+                    <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
+                        <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
+                        <p class="title enw2">GitRoll</p>
+                    </a>
+                </div>
+            </details>
+            <details id="programming_platforms" open>
+                <summary class="enw1">Programming Platforms</summary>
+                <div class="smallitems">
+                    <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
+                        <p class="title enw2">Codeforces</p>
+                    </a>
+                    <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
+                        <p class="title enw2">AtCoder</p>
+                    </a>
+                    <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo">
+                        <p class="title enw2">HackerRank</p>
+                    </a>
+                    <a class="item" href="https://leetcode.com/u/Shuba247/" target="_blank">
+                        <img src="/pictures/profile_use/link/leetcode.svg" alt="LeetCode logo">
+                        <p class="title enw2">LeetCode</p>
+                    </a>
+                    <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
+                        <p class="title enw2">picoCTF</p>
+                    </a>
+                    <a class="item" href="https://www.freecodecamp.org/BlueBoy247" target="_blank">
+                        <img src="/pictures/profile_use/link/freecodecamp.svg" alt="freeCodeCamp logo">
+                        <p class="title enw2">freeCodeCamp</p>
+                    </a>
+                </div>
+            </details>
+            <details id="support_platforms" open>
+                <summary class="enw1">Support Platforms</summary>
+                <div class="smallitems">
+                    <a class="item" href="https://www.patreon.com/blueboy247" target="_blank">
+                        <img src="/pictures/profile_use/link/patreon.svg" alt="Patreon logo">
+                        <p class="title enw2">Patreon</p>
+                    </a>
+                    <a class="item" href="https://buymeacoffee.com/blueboy247" target="_blank">
+                        <img src="/pictures/profile_use/link/buymeacoffee.svg" alt="BuyMeACoffee logo">
+                        <p class="title enw2">Buy Me A Coffee</p>
+                    </a>
+                </div>
+            </details>
         </div>
     </main>
     <footer>
