Updated details of certifications

--- a/en/index.html
+++ b/en/index.html
@@ -148,6 +148,11 @@
             </div>
             <h3 class="enw2" id="certifications">Certifications</h3>
             <div class="items">
+                <a class="item" href="https://www.freecodecamp.org/certification/BlueBoy247/responsive-web-design" target="_blank">
+                    <p class="title enw2">Responsive Web Design</p>
+                    <p class="description enw2">freeCodeCamp</p>
+                    <p class="time enw2">Nov 13, 2024</p>
+                </a>
                 <a class="item" href="https://www.hackerrank.com/certificates/d986ce5d9af8" target="_blank">
                     <p class="title enw2">Python (Basic)</p>
                     <p class="description enw2">HackerRank</p>
