--- a/en/index.html
+++ b/en/index.html
@@ -66,7 +66,7 @@
         <div class="subnav">
             <button class="enw2" onclick="scrollToBlock('intro')">Self-Intro</button>
             <button class="enw2" onclick="scrollToBlock('education')">Education</button>
-            <button class="enw2" onclick="scrollToBlock('experience')">Work Experiences</button>
+            <button class="enw2" onclick="scrollToBlock('experience')">Work Experience</button>
             <button class="enw2" onclick="scrollToBlock('activities')">Extracurricular Activities</button>
             <button class="enw2" onclick="scrollToBlock('skills')">Skills</button>
             <button class="enw2" onclick="scrollToBlock('certifications')">Certifications</button>
@@ -110,6 +110,18 @@
                     <p class="description enw2">Internal Affairs Officer</p>
                     <p class="time enw2">Feb 2023 ~ Jul 2023</p>
                 </a>
+                <a class="item" href="https://35.infor.org" target="_blank">
+                    <img src="/pictures/profile_use/experience/infor35th_web.png" alt="INFOR35th Web Course's visual identity">
+                    <p class="title enw2">INFOR 35th Web Development Training Course</p>
+                    <p class="description enw2">Co-Instructor</p>
+                    <p class="time enw2">Mar 2023 ~ Jun 2023</p>
+                </a>
+                <a class="item" href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">
+                    <img src="/pictures/profile_use/experience/utsa.jpg" alt="UTSA's seal">
+                    <p class="title enw2">University Of Taipei Student Association 11st</p>
+                    <p class="description enw2">Information Officer</p>
+                    <p class="time enw2">Sep 2024 ~ Present</p>
+                </a>
             </div>
             <h3 class="enw2" id="skills">Skills</h3>
             <div class="smallitems">
@@ -143,7 +155,7 @@
                 </div>
                 <div class="item">
                     <img src="/pictures/profile_use/skill/java.svg" alt="Java icon">
-                    <p class="title zhw">Java</p>
+                    <p class="title enw2">Java</p>
                 </div>
             </div>
             <h3 class="enw2" id="certifications">Certifications</h3>
@@ -162,9 +174,6 @@
                     <p class="title enw2">The General English Proficiency Test<br>(Intermediate level)</p>
                     <p class="description enw2">The Language Training and Testing Center</p>
                     <p class="time enw2">Jan 24, 2022</p>
-                </a>
-            </div>
-                </a>
                 </a>
             </div>
             <h3 class="enw2" id="links">Links</h3>
