--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <div class="subnav">
             <button class="zhw" onclick="scrollToBlock('intro')">自我介紹</button>
             <button class="zhw" onclick="scrollToBlock('education')">學歷</button>
-            <button class="zhw" onclick="scrollToBlock('experiences')">經歷</button>
+            <button class="zhw" onclick="scrollToBlock('experiences')">工作經歷</button>
+            <button class="zhw" onclick="scrollToBlock('activities')">在校經歷</button>
             <button class="zhw" onclick="scrollToBlock('skills')">技能</button>
             <button class="zhw" onclick="scrollToBlock('links')">個人連結</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
@@ -74,69 +75,108 @@
             <hr>
             <p class="zhw">一名正在努力不爆肝的大學生。</p>
             <p class="zhw">目前正在學習全端開發、外掛程式與手機應用開發、物聯網、機器學習及資安技術。</p>
-            <p class="zhw">興趣有彈鋼琴、打羽球、聽音樂、看動漫、看輕小說、看 VTuber 直播，很喜歡日本二次元文化，VTuber 主推 hololive 的大空スバル。</p>
+            <p class="zhw">興趣有彈鋼琴、打羽球、聽音樂、看動漫、看輕小說、看 VTuber 直播，喜歡日本二次元文化，VTuber 主推 hololive 的大空スバル。</p>
             <h3 class="zhw" id="education">學歷</h3>
             <div class="items">
                 <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
-                    <img src="/pictures/profile_use/education/ck_seal.png" alt="建國中學校徽">
+                    <picture>
+                        <source srcset="/pictures/profile_use/education/ck_seal.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/education/ck_seal.png" type="image/png">
+                        <img src="/pictures/profile_use/education/ck_seal.png" alt="建國中學校徽" width="144" height="144">
+                    </picture>
                     <p class="title zhw">臺北市立建國高級中學</p>
                     <p class="description zhw">普通科</p>
                     <p class="time zhw">2021/09 ~ 2024/06</p>
                 </a>
                 <a class="item" href="https://cs.utaipei.edu.tw/" target="_blank">
-                    <img src="/pictures/profile_use/education/utaipei_seal.png" alt="臺北市立大學校徽">
+                    <picture>
+                        <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
+                        <img src="/pictures/profile_use/education/utaipei_seal.png" alt="臺北市立大學校徽" width="144" height="144">
+                    </picture>
                     <p class="title zhw">臺北市立大學</p>
                     <p class="description zhw">資訊科學系</p>
                     <p class="time zhw">2024/09 ~ Present</p>
                 </a>
             </div>
-            <h3 class="zhw" id="experiences">經歷</h3>
+            <h3 class="zhw" id="experiences">工作經歷</h3>
+            <div class="items">
+                <a class="item" href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=zh_TW" target="_blank">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/tonghsun.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/tonghsun.png" type="image/png">
+                        <img src="/pictures/profile_use/experience/tonghsun.png" alt="童訊科技股份有限公司商標" width="144" height="144">
+                    </picture>
+                    <p class="title zhw">童訊科技股份有限公司</p>
+                    <p class="description zhw">課程助教</p>
+                    <p class="time zhw">2024/09 ~ Present</p>
+                </a>
+            </div>
+            <h3 class="zhw" id="activities">在校經歷</h3>
             <div class="items">
                 <a class="item" href="https://35.infor.org" target="_blank">
-                    <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th社徽">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/infor35th.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/infor35th.png" type="image/png">
+                        <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th社徽" width="144" height="144">
+                    </picture>
                     <p class="title zhw">建國中學資訊社35th</p>
                     <p class="description zhw">內務</p>
                     <p class="time zhw">2023/02 ~ 2023/07</p>
                 </a>
-                <a class="item" href="https://findbiz.nat.gov.tw/fts/query/QueryBar/queryInit.do?banNo=50901194&fhl=zh_TW" target="_blank">
-                        <img src="/pictures/profile_use/experience/tonghsun.png" alt="童訊科技股份有限公司商標" width="144" height="144">
-                    <p class="title zhw">童訊科技股份有限公司</p>
-                    <p class="description zhw">課程助教</p>
+                <a class="item" href="https://35.infor.org" target="_blank">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/infor35th_web.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/infor35th_web.png" type="image/png">
+                        <img src="/pictures/profile_use/experience/infor35th_web.png" alt="INFOR35th網頁培訓班視覺圖" width="144" height="144">
+                    </picture>
+                    <p class="title zhw">建國中學資訊社35th網頁培訓班</p>
+                    <p class="description zhw">共同講師</p>
+                    <p class="time zhw">2023/03 ~ 2023/06</p>
+                </a>
+                <a class="item" href="https://www.facebook.com/Utaipeisa2.0/" target="_blank">
+                    <picture>
+                        <source srcset="/pictures/profile_use/experience/utsa.webp" type="image/webp">
+                        <source srcset="/pictures/profile_use/experience/utsa.jpg" type="image/jpg">
+                        <img src="/pictures/profile_use/experience/utsa.jpg" alt="臺北市立大學學生會標誌" width="144" height="144">
+                    </picture>
+                    <p class="title zhw">臺北市立大學學生會11st</p>
+                    <p class="description zhw">資訊部</p>
                     <p class="time zhw">2024/09 ~ Present</p>
                 </a>
             </div>
             <h3 class="zhw" id="skills">技能</h3>
             <div class="smallitems">
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
+                    <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon" width="96" height="96">
                     <p class="title zhw">Python 3</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/html5.svg" alt="HTML5 icon">
+                    <img src="/pictures/profile_use/skill/html5.svg" alt="HTML5 icon" width="96" height="96">
                     <p class="title zhw">HTML 5</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/css3.svg" alt="CSS3 icon">
+                    <img src="/pictures/profile_use/skill/css3.svg" alt="CSS3 icon" width="96" height="96">
                     <p class="title zhw">CSS 3</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/javascript.svg" alt="Javascript icon">
+                    <img src="/pictures/profile_use/skill/javascript.svg" alt="Javascript icon" width="96" height="96">
                     <p class="title zhw">JavaScript</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon">
+                    <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon" width="96" height="96">
                     <p class="title zhw">jQuery</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
+                    <img src="/pictures/profile_use/skill/c.svg" alt="C icon" width="96" height="96">
                     <p class="title zhw">C</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
+                    <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon" width="96" height="96">
                     <p class="title zhw">Arduino</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/java.svg" alt="Java icon">
+                    <img src="/pictures/profile_use/skill/java.svg" alt="Java icon" width="96" height="96">
                     <p class="title zhw">Java</p>
                 </div>
             </div>
