--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -43,6 +43,7 @@
         <nav>
             <ul id="mobilenav">
                 <li><a class="navb zhwb" href="/en/">Home</a></li>
+                <li><a class="navb zhwb" href="/en/projects/">Projects</a></li>
                 <li><a class="navb zhwb" href="/en/contact/">Contact</a></li>
                 <li><a class="navb zhwb" href="/">中文</a></li>
                 <hr>
