--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Allen Chang">
-    <meta name="description" content="查看我的專案作品，展示我在各技術領域的實際經驗和創新能力。">
+    <meta name="description" content="查看我的專案作品，了解我在各技術領域的實際經驗和創新能力。">
     <meta name="keywords" content="專案作品, 前端開發, 後端開發, 技術專案, 網站開發, 應用程式開發, AI, IoT, 機器學習, Allen, Chang, Yu-Lun, blueboy, blueboy247">
     <!-- common source -->
     <link rel="stylesheet" href="/styles/main.css">
@@ -73,53 +73,51 @@
             </select>
         </div>
         <div id="projectc">
-            <a href="https://github.com/BlueBoy247/Notice-Bot" target="_blank" class="problock personal">
-                <div class="proimage">
-                    <img src="/pictures/project_use/NoticeBot.png" alt="Notice Bot" title="Notice Bot">
-                </div>
-                <p class="protitle zhwb">Notice Bot</p>
-                <div class="protag zhw">
-                    <span>Discord-Bot</span>
-                    <span>Python</span>
-                </div>
-                <p class="probrief zhw">會替你倒數事件的 DC Bot。</p>
-            </a>
             <a href="https://tw-anscheck.pages.dev/" target="_blank" class="problock personal">
                 <div class="proimage">
                     <img src="/pictures/project_use/TW-AnsCheck.png" alt="臺灣升學考試對答" title="臺灣升學考試對答">
                 </div>
-                <p class="protitle zhwb">臺灣升學考試對答</p>
-                <div class="protag zhw">
-                    <span>HTML</span>
-                    <span>JavaScript</span>
-                    <span>Bootstrap</span>
+                <div class="prodetails">
+                    <p class="protitle zhwb">臺灣升學考試對答</p>
+                    <p class="protime zhw">2024/04 ~ Present</p>
+                    <p class="probrief zhw">線上對升學考試答案的平台。臺灣升學考試的成績單只會給等級或級分，若想知道自己的原始分數，必須拿著官網的解答一題一題對答算分，但這樣做既麻煩耗時，又有答案對錯、分數算錯的可能，本網站為解決此不便而誕生。</p>
+                    <div class="protag zhw">
+                        <span>HTML</span>
+                        <span>JavaScript</span>
+                        <span>Bootstrap</span>
+                    </div>
                 </div>
-                <p class="probrief zhw">線上對升學考試答案的平台。</p>
-            </a>
-            <a href="https://35.infor.org/" target="_blank" class="problock infor35th">
-                <div class="proimage">
-                    <img src="/pictures/project_use/infor35th-website.png" alt="INFOR 35th 社網" title="INFOR 35th 社網">
-                </div>
-                <p class="protitle zhwb">INFOR 35th 官網</p>
-                <div class="protag zhw">
-                    <span>HTML</span>
-                    <span>CSS</span>
-                    <span>Bootstrap</span>
-                </div>
-                <p class="probrief zhw">建中資訊社35屆社團官網。</p>
             </a>
             <a href="https://blueboy247.github.io/blog/" target="_blank" class="problock personal">
                 <div class="proimage">
                     <img src="/pictures/project_use/MyBlog.png" alt="My Blog" title="My Blog">
                 </div>
-                <p class="protitle zhwb">BlueBoy Space</p>
-                <div class="protag zhw">
-                    <span>HTML</span>
-                    <span>CSS</span>
-                    <span>JavaScript</span>
-                    <span>jQuery</span>
+                <div class="prodetails">
+                    <p class="protitle zhwb">BlueBoy Space</p>
+                    <p class="protime zhw">2023/02 ~ Present</p>
+                    <p class="probrief zhw">我自己開發的個人部落格。為原本高中111-2學期自主學習計畫「動手建個人網站」之成果，計畫結束後仍持續使用及改善維護至今。</p>
+                    <div class="protag zhw">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                        <span>jQuery</span>
+                    </div>
                 </div>
-                <p class="probrief zhw">我自己開發的個人部落格。</p>
+            </a>
+            <a href="https://35.infor.org/" target="_blank" class="problock infor35th">
+                <div class="proimage">
+                    <img src="/pictures/project_use/infor35th-website.png" alt="INFOR 35th 社網" title="INFOR 35th 社網">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">INFOR 35th 官網</p>
+                    <p class="protime zhw">2023/02 ~ 2023/06</p>
+                    <p class="probrief zhw">建中資訊社35屆社團官網。本網站為有意了解建國中學資訊社者，提供應屆幹部成員介紹、應屆開設課程內容，以及合作之校外社團等資訊。我負責網站的設計和製作，並使用了HTML、CSS及 Bootstrap 5來製作美觀而簡潔的網站界面。</p>
+                    <div class="protag zhw">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Bootstrap</span>
+                    </div>
+                </div>
             </a>
         </div>
     </main>
